alteration of h1 and h2

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <title>adesignjem</title>
   </head>
   <body>
-    <h1>adesignjem</h1>
-    <h2>Hello World</h2>
+    <h1>ADESIGNJEM</h1>
+    <h2>UK Based Web Designer + Developer</h2>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
