added tag line into h1 with class

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <title>adesignjem</title>
   </head>
   <body>
-    <h1>ADESIGNJEM</h1>
-    <h2>UK Based Web Designer + Developer</h2>
+    <h1>
+      ADESIGNJEM
+      <div class="tagline">UK BASED WEB DESIGNER + DEVELOPER</div>
+    </h1>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
