created hero instead of padding on h1

--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/styles.css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css/style.css" />
-
     <title>adesignjem</title>
   </head>
   <body>
-    <h1>
-      ADESIGNJEM
-      <div class="tagline">UK BASED WEB DESIGNER + DEVELOPER</div>
-    </h1>
+    <div class="hero">
+      <h1>ADESIGNJEM</h1>
+      <h2>UK BASED WEB DESIGNER + DEVELOPER</h2>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
