added contact button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <div class="hero">
       <h1>ADESIGNJEM</h1>
       <h2>UK BASED WEB DESIGNER + DEVELOPER</h2>
+      <br />
+      <button type="button" class="btn btn-light">CONTACT</button>
     </div>
   </body>
   <script
