--- a/index.html
+++ b/index.html
@@ -25,6 +25,157 @@
       <br />
       <button type="button" class="btn btn-light">CONTACT</button>
     </div>
+    <br />
+    <br />
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 text-left">
+          <h3>About</h3>
+          <h4>
+            My name's Jem. I am a website designer and developer, based in the
+            UK 🇬🇧. I qualified as a Junior Web Developer in Spring 2025 after
+            completing a 12 month coding workshop through
+            <a href="https://www.shecodes.io">SheCodes</a> ✌🏼.
+          </h4>
+        </div>
+
+        <div class="col-sm-3 text-left">
+          <br />
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>SEO</li>
+          <li>JAVASCRIPT</li>
+        </div>
+        <div class="col-sm-3 text-left">
+          <br />
+
+          <li>API</li>
+          <li>VS CODE</li>
+          <li>RESPONSIVITY</li>
+          <li>GITHUB</li>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>Projects</h3>
+          <h4>HTML - CSS - JAVASCRIPT</h4>
+          <div class="col-sm-6 border text-left">
+            <img
+              src="images/quote.png"
+              width="300px"
+              alt="inspirational quote link"
+            />
+          </div>
+          <div class="col-sm-6 border text-left">
+            <a
+              href="https://bespoke-raindrop-998144.netlify.app/"
+              target="_blank"
+              >Inspirational Quote</a
+            ><br />I designed, created and developed this website using HTML,
+            CSS and Javascript, as part of a SheCodes Challenge.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>Weather</h3>
+          <h4>GITHUB - JAVASCRIPT - API</h4>
+          <div class="col-sm-6 border text-left">
+            <img
+              src="images/weather.png"
+              width="300px"
+              alt="weather forecast app"
+            />
+          </div>
+          <div class="col-sm-6 border text-left">
+            <a href="https://jemweather.netlify.app/" target="_blank"
+              >Weather App</a
+            ><br />I designed, created and developed this weather website using
+            Javascript. You can check the weather forecast , humidity and wind
+            in any country.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>World Time</h3>
+          <h4>JAVASCRIPT - CDN - NETLIFY</h4>
+          <div class="col-sm-6 border text-left">
+            <img
+              src="images/time.png"
+              width="300px"
+              alt="link to world clock"
+            />
+          </div>
+          <div class="col-sm-6 border text-left">
+            <a
+              href="https://adorable-vacherin-85ae36.netlify.app/"
+              target="_blank"
+              >World Clock</a
+            ><br />This is a worldwide clock, which I designed and built myself.
+            This uses live information from live CDN to ensure the data is
+            always accurate.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>Beccie Dunn Fitness</h3>
+          <h4>FIGMA DESIGN</h4>
+          <div class="col-sm-6 border text-left">
+            <img
+              src="images/beccie.png"
+              width="300px"
+              alt="link to beccie dunn fitness coach"
+            />
+          </div>
+          <div class="col-sm-6 border text-left">
+            <a href="https://www.becciedunnfitness.com" target="_blank"
+              >Beccie Dunn Fitness</a
+            ><br />I designed this website for Beccie Dunn, who is a PT in
+            Southampton. I designed this long before I started to code myself.
+            She wanted the website to really reflect her strength, resilience
+            and positivity. I passed the Figma file to the developer who built
+            it for Beccie.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>Bowen Head Toe Tail</h3>
+          <h4>FIGMA DESIGN</h4>
+          <div class="col-sm-6 border text-left">
+            <img
+              src="images/bowen.png"
+              width="300px"
+              alt="link to bowen head to tail"
+            />
+          </div>
+          <div class="col-sm-6 border text-left">
+            <a href="https://www.bowenheadtoetail.com" target="_blank"
+              >Bowen Head Toe Tail</a
+            ><br />This is another design of mine, for a canine bowen company. I
+            designed this website and passed on the Figma file to the developer,
+            who built the page for Sam.
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
