--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
             />
           </div>
           <div class="col-sm-6 border text-left">
+            <br />
             <a
               href="https://bespoke-raindrop-998144.netlify.app/"
               target="_blank"
               >Inspirational Quote</a
-            ><br />I designed, created and developed this website using HTML,
-            CSS and Javascript, as part of a SheCodes Challenge.
+            ><br /><br />I designed, created and developed this website using
+            HTML, CSS and Javascript, as part of a SheCodes Challenge. <br />
           </div>
         </div>
       </div>
@@ -94,11 +95,13 @@
             />
           </div>
           <div class="col-sm-6 border text-left">
+            <br />
             <a href="https://jemweather.netlify.app/" target="_blank"
               >Weather App</a
-            ><br />I designed, created and developed this weather website using
+            ><br />
+            <br />I designed, created and developed this weather website using
             Javascript. You can check the weather forecast , humidity and wind
-            in any country.
+            in any country. <br />
           </div>
         </div>
       </div>
@@ -117,13 +120,15 @@
             />
           </div>
           <div class="col-sm-6 border text-left">
+            <br />
             <a
               href="https://adorable-vacherin-85ae36.netlify.app/"
               target="_blank"
               >World Clock</a
-            ><br />This is a worldwide clock, which I designed and built myself.
+            ><br />
+            <br />This is a worldwide clock, which I designed and built myself.
             This uses live information from live CDN to ensure the data is
-            always accurate.
+            always accurate. <br />
           </div>
         </div>
       </div>
@@ -142,13 +147,15 @@
             />
           </div>
           <div class="col-sm-6 border text-left">
+            <br />
             <a href="https://www.becciedunnfitness.com" target="_blank"
               >Beccie Dunn Fitness</a
-            ><br />I designed this website for Beccie Dunn, who is a PT in
+            ><br />
+            <br />I designed this website for Beccie Dunn, who is a PT in
             Southampton. I designed this long before I started to code myself.
             She wanted the website to really reflect her strength, resilience
             and positivity. I passed the Figma file to the developer who built
-            it for Beccie.
+            it for Beccie. <br />
           </div>
         </div>
       </div>
@@ -167,11 +174,13 @@
             />
           </div>
           <div class="col-sm-6 border text-left">
+            <br />
             <a href="https://www.bowenheadtoetail.com" target="_blank"
               >Bowen Head Toe Tail</a
-            ><br />This is another design of mine, for a canine bowen company. I
+            ><br />
+            <br />This is another design of mine, for a canine bowen company. I
             designed this website and passed on the Figma file to the developer,
-            who built the page for Sam.
+            who built the page for Sam. <br />
           </div>
         </div>
       </div>
