updated more to the projects and sizing

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
               >Inspirational Quote</a
             ><br /><br />I designed, created and developed this website using
             HTML, CSS and Javascript, as part of a SheCodes Challenge. <br />
+            <br />
+            Instead of just choosing a quote and putting it on the page, I
+            thought I would make it interactive. The user pops in their name and
+            the generator will create a personalised quote. To do this, I used a
+            lot of Javascript and research around common letters in names!
           </div>
         </div>
       </div>
@@ -102,6 +107,9 @@
             <br />I designed, created and developed this weather website using
             Javascript. You can check the weather forecast , humidity and wind
             in any country. <br />
+            <br />
+            This was part of a SheCodes project, where I used the skills I had
+            learned in the previous weeks to produce this website.
           </div>
         </div>
       </div>
@@ -129,6 +137,8 @@
             <br />This is a worldwide clock, which I designed and built myself.
             This uses live information from live CDN to ensure the data is
             always accurate. <br />
+            <br />
+            Simply enter the city and hey presto, there is the time!
           </div>
         </div>
       </div>
@@ -152,10 +162,11 @@
               >Beccie Dunn Fitness</a
             ><br />
             <br />I designed this website for Beccie Dunn, who is a PT in
-            Southampton. I designed this long before I started to code myself.
-            She wanted the website to really reflect her strength, resilience
-            and positivity. I passed the Figma file to the developer who built
-            it for Beccie. <br />
+            Southampton. I designed this back in 2021, long before I started to
+            code myself. She wanted the website to really reflect her strength,
+            resilience and positivity. I passed the Figma file to the developer
+            who built it for Beccie. Beccie was super happy with the design,
+            usability and that it really reflected her branding.<br />
           </div>
         </div>
       </div>
@@ -180,7 +191,9 @@
             ><br />
             <br />This is another design of mine, for a canine bowen company. I
             designed this website and passed on the Figma file to the developer,
-            who built the page for Sam. <br />
+            who built the page for Sam. I have tweaked the website for Sam
+            myself, since learning more about coding and always want to ensure
+            it reflects her current business offer and branding.<br />
           </div>
         </div>
       </div>
