--- a/about.html
+++ b/about.html
@@ -19,7 +19,10 @@
     <title>adesignjem</title>
   </head>
   <body>
-    <h1>about</h1>
+    <div class="hero">
+      <h1>ADESIGNJEM</h1>
+      <h2>UK BASED WEB DESIGNER + DEVELOPER</h2>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
