adjusting sizing again

--- a/index.html
+++ b/index.html
@@ -23,177 +23,38 @@
       <h1>ADESIGNJEM</h1>
       <h2>UK BASED WEB DESIGNER + DEVELOPER</h2>
       <br />
-      <button type="button" class="btn btn-light">CONTACT</button>
+      <img
+        class="jemlogo"
+        src="images/jemlogo.png"
+        width="80px"
+        alt="a white j inside a blue circle"
+      />
     </div>
     <br />
     <br />
 
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6 text-left">
-          <h3>About</h3>
-          <h4>
-            My name's Jem. I am a website designer and developer, based in the
-            UK 🇬🇧. I qualified as a Junior Web Developer in Spring 2025 after
-            completing a 12 month coding workshop through
-            <a href="https://www.shecodes.io">SheCodes</a> ✌🏼.
-          </h4>
-        </div>
-
-        <div class="col-sm-3 text-left">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>SEO</li>
-          <li>JAVASCRIPT</li>
-        </div>
-        <div class="col-sm-3 text-left">
-          <li>API</li>
-          <li>VS CODE</li>
-          <li>RESPONSIVITY</li>
-          <li>GITHUB</li>
-        </div>
-      </div>
+    <div class="about">
+      <h3>About</h3>
+      <h4>
+        My name's Jem. I am a website designer and developer, based in the UK
+        🇬🇧. I qualified as a Junior Web Developer in Spring 2025 after
+        completing a 12 month coding workshop through
+        <a href="https://www.shecodes.io">SheCodes</a> ✌🏼.
+      </h4>
     </div>
     <br />
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Projects</h3>
-          <h4>HTML - CSS - JAVASCRIPT</h4>
-          <div class="col-sm-6 border text-left">
-            <img
-              src="images/quote.png"
-              width="300px"
-              alt="inspirational quote link"
-            />
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-            <a
-              href="https://bespoke-raindrop-998144.netlify.app/"
-              target="_blank"
-              >Inspirational Quote</a
-            ><br /><br />I designed, created and developed this website using
-            HTML, CSS and Javascript, as part of a SheCodes Challenge. <br />
-            <br />
-            Instead of just choosing a quote and putting it on the page, I
-            thought I would make it interactive. The user pops in their name and
-            the generator will create a personalised quote. To do this, I used a
-            lot of Javascript and research around common letters in names!
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Weather</h3>
-          <h4>GITHUB - JAVASCRIPT - API</h4>
-          <div class="col-sm-6 border text-left">
-            <img
-              src="images/weather.png"
-              width="300px"
-              alt="weather forecast app"
-            />
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-            <a href="https://jemweather.netlify.app/" target="_blank"
-              >Weather App</a
-            ><br />
-            <br />I designed, created and developed this weather website using
-            Javascript. You can check the weather forecast , humidity and wind
-            in any country. <br />
-            <br />
-            This was part of a SheCodes project, where I used the skills I had
-            learned in the previous weeks to produce this website.
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>World Time</h3>
-          <h4>JAVASCRIPT - CDN - NETLIFY</h4>
-          <div class="col-sm-6 border text-left">
-            <img
-              src="images/time.png"
-              width="300px"
-              alt="link to world clock"
-            />
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-            <a
-              href="https://adorable-vacherin-85ae36.netlify.app/"
-              target="_blank"
-              >World Clock</a
-            ><br />
-            <br />This is a worldwide clock, which I designed and built myself.
-            This uses live information from live CDN to ensure the data is
-            always accurate. <br />
-            <br />
-            Simply enter the city and hey presto, there is the time!
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Beccie Dunn Fitness</h3>
-          <h4>FIGMA DESIGN</h4>
-          <div class="col-sm-6 border text-left">
-            <img
-              src="images/beccie.png"
-              width="300px"
-              alt="link to beccie dunn fitness coach"
-            />
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-            <a href="https://www.becciedunnfitness.com" target="_blank"
-              >Beccie Dunn Fitness</a
-            ><br />
-            <br />I designed this website for Beccie Dunn, who is a PT in
-            Southampton. I designed this back in 2021, long before I started to
-            code myself. She wanted the website to really reflect her strength,
-            resilience and positivity. I passed the Figma file to the developer
-            who built it for Beccie. Beccie was super happy with the design,
-            usability and that it really reflected her branding.<br />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="projects">
-      <div class="container">
-        <div class="row">
-          <h3>Bowen Head Toe Tail</h3>
-          <h4>FIGMA DESIGN</h4>
-          <div class="col-sm-6 border text-left">
-            <img
-              src="images/bowen.png"
-              width="300px"
-              alt="link to bowen head to tail"
-            />
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
-            <a href="https://www.bowenheadtoetail.com" target="_blank"
-              >Bowen Head Toe Tail</a
-            ><br />
-            <br />This is another design of mine, for a canine bowen company. I
-            designed this website and passed on the Figma file to the developer,
-            who built the page for Sam. I have tweaked the website for Sam
-            myself, since learning more about coding and always want to ensure
-            it reflects her current business offer and branding.<br />
-          </div>
-        </div>
-      </div>
+    <div class="skills">
+      <h3><br />Skills</h3>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>SEO</li>
+        <li>JAVASCRIPT</li>
+        <li>API</li>
+        <li>VS CODE</li>
+        <li>RESPONSIVITY</li>
+        <li>GITHUB</li>
+      </ul>
     </div>
   </body>
   <script
