updating sizing to get it perfect across all devises

--- a/index.html
+++ b/index.html
@@ -39,22 +39,19 @@
         My name's Jem. I am a website designer and developer, based in the UK
         🇬🇧. I qualified as a Junior Web Developer in Spring 2025 after
         completing a 12 month coding workshop through
-        <a href="https://www.shecodes.io">SheCodes</a> ✌🏼.
+        <a href="https://www.shecodes.io">SheCodes</a> ✌🏼. <br /><br />
+        <br /><br />
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>SEO</li>
+          <li>JAVASCRIPT</li>
+          <li>API</li>
+          <li>VS CODE</li>
+          <li>RESPONSIVITY</li>
+          <li>GITHUB</li>
+        </ul>
       </h4>
-    </div>
-    <br />
-    <div class="skills">
-      <h3><br />Skills</h3>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>SEO</li>
-        <li>JAVASCRIPT</li>
-        <li>API</li>
-        <li>VS CODE</li>
-        <li>RESPONSIVITY</li>
-        <li>GITHUB</li>
-      </ul>
     </div>
   </body>
   <script
