adjusted sizes again

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <br />
 
     <div class="about">
-      <h3>About</h3>
       <h4>
         My name's Jem. I am a website designer and developer, based in the UK
         🇬🇧. I qualified as a Junior Web Developer in Spring 2025 after
         completing a 12 month coding workshop through
         <a href="https://www.shecodes.io">SheCodes</a> ✌🏼. <br /><br />
-        <br /><br />
+        I learned many skills and have designed and built websites using the
+        following languages and techniques: <br /><br />
         <ul>
           <li>HTML</li>
           <li>CSS</li>
