set up other pages with heros

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <div class="hero">
-      <h1>ADESIGNJEM</h1>
-      <h2>UK BASED WEB DESIGNER + DEVELOPER</h2>
+      <h1>ABOUT</h1>
+      <h2>aboutaboutaboutaboutabout</h2>
     </div>
   </body>
   <script
