--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,11 @@
     <title>Projects</title>
   </head>
   <body>
+    <div class="hero">
+      <h1>PROJECTS</h1>
+      <h2>projectsprojectsprojects</h2>
+    </div>
+    <br /><br /><br /><br />
     <div class="projects">
       <div class="container">
         <div class="row">
