added links to the photos

--- a/about.html
+++ b/about.html
@@ -16,12 +16,53 @@
     <link rel="stylesheet" href="/styles.css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>adesignjem</title>
+    <title>Projects</title>
   </head>
   <body>
     <div class="hero">
-      <h1>ABOUT</h1>
-      <h2>aboutaboutaboutaboutabout</h2>
+      <h1>About</h1>
+      <h2>aboutaboutaboutabout</h2>
+    </div>
+    <br /><br />
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>About me</h3>
+          <h4>
+            <br />
+            After 15 years working with children + young people, I've decided to
+            persue my passion in design + tech. <br /><br />I've always loved
+            designing things, from posters to creating brands in my free time, I
+            am truly obsessed. <br /><br />
+            I took the plunge in 2024 by enrolling on the SheCodes full
+            developer course and have not looked back. <br /><br />
+            I qualified as a Junior Web Developer in Spring 2025 + continue to
+            build + develop my skills (literally).
+          </h4>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>Experience</h3>
+          <h4>
+            <br />
+            Whilst living in London, I was part of the
+            <a href="https://www.nonchalantmagazine.com">Nonchalant Magazine</a>
+            writers team, which involved researching and writing content, using
+            Wordpress, including SEO + social media<br /><br />In 2022 I
+            volunteered as a Website Designer for
+            <a href="https://www.numberfit.com">NumberFit</a> where I designed
+            their home page hero, about page + supported with their other
+            projects such as Maths Week England.<br /><br />
+            I have designed multiple websites for weddings which have been coded
+            by developers, including my own. <br /><br />
+            Now I have the skills to design + build websites myself!
+          </h4>
+        </div>
+      </div>
     </div>
   </body>
   <script
