--- a/projects.html
+++ b/projects.html
@@ -23,31 +23,127 @@
       <h1>PROJECTS</h1>
       <h2>projectsprojectsprojects</h2>
     </div>
-    <br /><br /><br /><br />
+    <br /><br />
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>Projects</h3>
+          <h4>
+            <br />
+            I have thoroughly enjoyed working on passion projects, as well as
+            building websites as part of my SheCodes course.<br /><br />
+            Below are some of the projects I have designed + built, using a
+            variety of languages + techniques! Thank you for checking them out.
+          </h4>
+        </div>
+      </div>
+    </div>
+    <br /><br />
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>Inspirational Quote Generator</h3>
+          <h4>JAVASCRIPT - HTML - CSS</h4>
+          <div class="col-sm-6 border text-left">
+            <a
+              href="https://bespoke-raindrop-998144.netlify.app/"
+              target="_blank"
+            >
+              <img
+                src="images/quote.png"
+                width="300px"
+                alt="link to inspirational quote generator"
+            /></a>
+          </div>
+          <div class="col-sm-6 border text-left">
+            <br />
+
+            <h5>
+              <a
+                href="https://bespoke-raindrop-998144.netlify.app/"
+                target="_blank"
+                >Inspirational Quote Generator</a
+              >
+            </h5>
+
+            <br />I designed this website as part of a SheCodes monthly
+            challenge. Rather than just choose a quote to display, I decided to
+            make the website interactive, requiring the user to enter their
+            name, to recieve a personalised quote.
+            <a
+              href="https://bespoke-raindrop-998144.netlify.app/"
+              target="_blank"
+              >get your inspirational quote!</a
+            >
+            <br />
+            <br />
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="projects">
       <div class="container">
         <div class="row">
           <h3>World Time</h3>
           <h4>JAVASCRIPT - CDN - NETLIFY</h4>
           <div class="col-sm-6 border text-left">
-            <img
-              src="images/time.png"
-              width="300px"
-              alt="link to world clock"
-            />
-          </div>
-          <div class="col-sm-6 border text-left">
-            <br />
             <a
               href="https://adorable-vacherin-85ae36.netlify.app/"
               target="_blank"
-              >World Clock</a
-            ><br />
+            >
+              <img
+                src="images/time.png"
+                width="300px"
+                alt="link to world clock"
+            /></a>
+          </div>
+          <div class="col-sm-6 border text-left">
+            <br />
+            <h5>
+              <a
+                href="https://adorable-vacherin-85ae36.netlify.app/"
+                target="_blank"
+                >World Clock</a
+              >
+            </h5>
+
             <br />This is a worldwide clock, which I designed and built myself.
             This uses live information from live CDN to ensure the data is
             always accurate. <br />
             <br />
-            Simply enter the city and hey presto, there is the time!
+            Simply enter the city and hey presto, there is the time! <br />
+            <br />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="projects">
+      <div class="container">
+        <div class="row">
+          <h3>World Weather</h3>
+          <h4>JAVASCRIPT - CDN - MOMENT.JS</h4>
+          <div class="col-sm-6 border text-left">
+            <a href="https://jemweather.netlify.app/" target="_blank">
+              <img
+                src="images/weather.png"
+                width="300px"
+                alt="link to world weather"
+            /></a>
+          </div>
+          <div class="col-sm-6 border text-left">
+            <br />
+            <h5>
+              <a href="https://jemweather.netlify.app/" target="_blank"
+                >World Weather</a
+              >
+            </h5>
+
+            <br />I designed this website as part of my SheCodes homework. The
+            website is linked to live data, giving up to date information around
+            worldwide weather! This project was a challenge, but a really great
+            learning experience!<br />
+            <br />
           </div>
         </div>
       </div>
@@ -59,23 +155,28 @@
           <h3>Beccie Dunn Fitness</h3>
           <h4>FIGMA DESIGN</h4>
           <div class="col-sm-6 border text-left">
-            <img
-              src="images/beccie.png"
-              width="300px"
-              alt="link to beccie dunn fitness coach"
-            />
+            <a href="https://www.becciedunnfitness.com" target="_blank">
+              <img
+                src="images/beccie.png"
+                width="300px"
+                alt="link to beccie dunn fitness"
+            /></a>
           </div>
           <div class="col-sm-6 border text-left">
             <br />
-            <a href="https://www.becciedunnfitness.com" target="_blank"
-              >Beccie Dunn Fitness</a
-            ><br />
+            <h5>
+              <a href="https://www.becciedunnfitness.com" target="_blank"
+                >Beccie Dunn Fitness</a
+              >
+            </h5>
+
             <br />I designed this website for Beccie Dunn, who is a PT in
             Southampton. I designed this back in 2021, long before I started to
             code myself. She wanted the website to really reflect her strength,
             resilience and positivity. I passed the Figma file to the developer
             who built it for Beccie. Beccie was super happy with the design,
             usability and that it really reflected her branding.<br />
+            <br />
           </div>
         </div>
       </div>
@@ -87,22 +188,27 @@
           <h3>Bowen Head Toe Tail</h3>
           <h4>FIGMA DESIGN</h4>
           <div class="col-sm-6 border text-left">
-            <img
-              src="images/bowen.png"
-              width="300px"
-              alt="link to bowen head to tail"
-            />
+            <a href="https://www.bowenheadtoetail.com" target="_blank">
+              <img
+                src="images/bowen.png"
+                width="300px"
+                alt="link to bowen therapy"
+            /></a>
           </div>
           <div class="col-sm-6 border text-left">
             <br />
-            <a href="https://www.bowenheadtoetail.com" target="_blank"
-              >Bowen Head Toe Tail</a
-            ><br />
+            <h5>
+              <a href="https://www.bowenheadtoetail.com" target="_blank"
+                >Bowen Head Toe Tail</a
+              >
+            </h5>
+
             <br />This is another design of mine, for a canine bowen company. I
             designed this website and passed on the Figma file to the developer,
             who built the page for Sam. I have tweaked the website for Sam
             myself, since learning more about coding and always want to ensure
             it reflects her current business offer and branding.<br />
+            <br />
           </div>
         </div>
       </div>
