added contact page

--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
       </div>
     </div>
     <br />
+    <h2><img src="images/jemlogo.png" width="100px" /></h2>
     <div class="projects">
       <div class="container">
         <div class="row">
