--- a/index.html
+++ b/index.html
@@ -19,6 +19,28 @@
     <title>adesignjem</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/jemlogo.png" class="primarylogo" alt="" />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html"> About</a>
+          </li>
+          <li>
+            <a href="/projects.html"> Projects</a>
+          </li>
+          <li>
+            <a href="/contact.html"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="hero">
       <h1>ADESIGNJEM</h1>
       <h2>UK BASED WEB DESIGNER + DEVELOPER</h2>
