--- a/index.html
+++ b/index.html
@@ -19,26 +19,30 @@
     <title>adesignjem</title>
   </head>
   <body>
-    <div class="container">
-      <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/jemlogo.png" class="primarylogo" alt="" />
-        </a>
-        <ul>
-          <li class="active">
-            <a href="/"> Home</a>
-          </li>
-          <li>
-            <a href="/about.html"> About</a>
-          </li>
-          <li>
-            <a href="/projects.html"> Projects</a>
-          </li>
-          <li>
-            <a href="/contact.html"> Contact</a>
-          </li>
-        </ul>
-      </nav>
+    <div class="navigation">
+      <div class="container">
+        <nav class="d-flex justify-content-center">
+          <ul>
+            <li>
+              <a href="/">
+                <img src="images/jemlogo.png" class="primarylogo" alt="" />
+              </a>
+            </li>
+            <li class="active">
+              <a href="/"> Home</a>
+            </li>
+            <li>
+              <a href="/about.html"> About</a>
+            </li>
+            <li>
+              <a href="/projects.html"> Projects</a>
+            </li>
+            <li>
+              <a href="/contact.html"> Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
 
     <div class="hero">
