linked all pages with nav added to all pages

--- a/about.html
+++ b/about.html
@@ -19,8 +19,33 @@
     <title>Projects</title>
   </head>
   <body>
+    <div class="navigation">
+      <div class="container">
+        <nav class="d-flex justify-content-center">
+          <ul>
+            <li>
+              <a href="/">
+                <img src="images/jemlogo.png" class="primarylogo" alt="" />
+              </a>
+            </li>
+            <li class="active">
+              <a href="/"> Home</a>
+            </li>
+            <li>
+              <a href="/about.html"> About</a>
+            </li>
+            <li>
+              <a href="/projects.html"> Projects</a>
+            </li>
+            <li>
+              <a href="/contact.html"> Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
     <div class="hero">
-      <h1>About</h1>
+      <h1>ABOUT</h1>
       <h2>aboutaboutaboutabout</h2>
     </div>
     <br /><br />
