--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,34 @@
     <link rel="stylesheet" href="/styles.css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>CONTACT</title>
   </head>
   <body>
+    <div class="navigation">
+      <div class="container">
+        <nav class="d-flex justify-content-center">
+          <ul>
+            <li>
+              <a href="/">
+                <img src="images/jemlogo.png" class="primarylogo" alt="" />
+              </a>
+            </li>
+            <li class="active">
+              <a href="/"> Home</a>
+            </li>
+            <li>
+              <a href="/about.html"> About</a>
+            </li>
+            <li>
+              <a href="/projects.html"> Projects</a>
+            </li>
+            <li>
+              <a href="/contact.html"> Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
     <div class="hero">
       <h1>CONTACT</h1>
       <h2>contactcontactcontactcontact</h2>
