made links target blank

--- a/about.html
+++ b/about.html
@@ -76,13 +76,15 @@
           <h4>
             <br />
             Whilst living in London, I was part of the
-            <a href="https://www.nonchalantmagazine.com">Nonchalant Magazine</a>
+            <a href="https://www.nonchalantmagazine.com" target="_blank"
+              >Nonchalant Magazine</a
+            >
             writers team, which involved researching and writing content, using
             Wordpress, including SEO + social media<br /><br />In 2022 I
             volunteered as a Website Designer for
-            <a href="https://www.numberfit.com">NumberFit</a> where I designed
-            their home page hero, about page + supported with their other
-            projects such as Maths Week England.<br /><br />
+            <a href="https://www.numberfit.com" target="_blank">NumberFit</a>
+            where I designed their home page hero, about page + supported with
+            their other projects such as Maths Week England.<br /><br />
             I have designed multiple websites for weddings which have been coded
             by developers, including my own. <br /><br />
             Now I have the skills to design + build websites myself!
