--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
           <li>RESPONSIVITY</li>
           <li>GITHUB</li>
         </ul>
+        <button class="primaryButton">Contact</button>
+        <button class="secondaryButton">Projects</button>
       </h4>
     </div>
   </body>
