added color to nav links

--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
           <li>RESPONSIVITY</li>
           <li>GITHUB</li>
         </ul>
-        <button class="primaryButton">Contact</button>
-        <button class="secondaryButton">Projects</button>
+        <a href="contact.html"
+          ><button class="primaryButton">Contact</button></a
+        >
+        <a href="projects.html">
+          <button class="secondaryButton">Projects</button></a
+        >
       </h4>
     </div>
   </body>
