--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
         >
       </h4>
     </div>
+    <footer class="footer">
+      <img src="images/jemlogo.png" width="60px" alt="" />
+      adesignjem@gmail.com |
+      <a href="https://www.instagram.com/adesignjem" target="_blank">
+        @adesignjem</a
+      >
+      | www.adesignjem.com
+    </footer>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
