--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/styles.css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects</title>
+    <title>About</title>
   </head>
   <body>
     <div class="navigation">
@@ -92,6 +92,14 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <img src="images/jemlogo.png" width="60px" alt="" />
+      adesignjem@gmail.com |
+      <a href="https://www.instagram.com/adesignjem" target="_blank">
+        @adesignjem</a
+      >
+      | www.adesignjem.com
+    </footer>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
