--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <link rel="stylesheet" href="/styles.css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>adesignjem</title>
+    <meta
+      name="description"
+      content="Hi! My name's Jem and I am a UK based Website Designer and Front-End Developer. I graduated from SheCodes in Spring 2025 as a Junior Developer and I am absolutely loving design and coding, even Javascript! Please do get in touch to bring your website ideas to life! "
+    />
+    <title>adesignjem UK based website designer and developer</title>
   </head>
   <body>
     <div class="navigation">
