--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
                 <img src="images/jemlogo.png" class="primarylogo" alt="" />
               </a>
             </li>
-            <li class="active">
+            <li>
               <a href="/"> Home</a>
             </li>
-            <li>
+            <li class="active">
               <a href="/about.html"> About</a>
             </li>
             <li>
@@ -76,13 +76,21 @@
           <h4>
             <br />
             Whilst living in London, I was part of the
-            <a href="https://www.nonchalantmagazine.com" target="_blank"
+            <a
+              href="https://www.nonchalantmagazine.com"
+              target="_blank"
+              title="link to nonchalant magazine website"
               >Nonchalant Magazine</a
             >
             writers team, which involved researching and writing content, using
             Wordpress, including SEO + social media<br /><br />In 2022 I
             volunteered as a Website Designer for
-            <a href="https://www.numberfit.com" target="_blank">NumberFit</a>
+            <a
+              href="https://www.numberfit.com"
+              target="_blank"
+              title="link to numberfit website"
+              >NumberFit</a
+            >
             where I designed their home page hero, about page + supported with
             their other projects such as Maths Week England.<br /><br />
             I have designed multiple websites for weddings which have been coded
@@ -95,7 +103,11 @@
     <footer class="footer">
       <img src="images/jemlogo.png" width="60px" alt="" />
       adesignjem@gmail.com |
-      <a href="https://www.instagram.com/adesignjem" target="_blank">
+      <a
+        href="https://www.instagram.com/adesignjem"
+        target="_blank"
+        title="link to adesignjem instagram"
+      >
         @adesignjem</a
       >
       | www.adesignjem.com
