--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="d-flex justify-content-center">
           <ul>
             <li>
-              <a href="/">
+              <a href="/" title="web design and developer, uk">
                 <img src="images/jemlogo.png" class="primarylogo" alt="" />
               </a>
             </li>
@@ -36,13 +36,28 @@
               <a href="/"> Home</a>
             </li>
             <li>
-              <a href="/about.html"> About</a>
+              <a
+                href="/about.html"
+                title="web design and developer, about page"
+              >
+                About</a
+              >
             </li>
             <li>
-              <a href="/projects.html"> Projects</a>
+              <a
+                href="/projects.html"
+                title="web design and developer, project page"
+              >
+                Projects</a
+              >
             </li>
             <li>
-              <a href="/contact.html"> Contact</a>
+              <a
+                href="/contact.html"
+                title="web design and developer, contact page"
+              >
+                Contact</a
+              >
             </li>
           </ul>
         </nav>
@@ -92,7 +107,11 @@
     <footer class="footer">
       <img src="images/jemlogo.png" width="60px" alt="" />
       adesignjem@gmail.com |
-      <a href="https://www.instagram.com/adesignjem" target="_blank">
+      <a
+        href="https://www.instagram.com/adesignjem"
+        target="_blank"
+        title="link to adesignjem instagram"
+      >
         @adesignjem</a
       >
       | www.adesignjem.com
