--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <img src="images/jemlogo.png" class="primarylogo" alt="" />
               </a>
             </li>
-            <li class="active">
+            <li>
               <a href="/"> Home</a>
             </li>
             <li>
@@ -37,7 +37,7 @@
             <li>
               <a href="/projects.html"> Projects</a>
             </li>
-            <li>
+            <li class="active">
               <a href="/contact.html"> Contact</a>
             </li>
           </ul>
@@ -112,7 +112,11 @@
     <footer class="footer">
       <img src="images/jemlogo.png" width="60px" alt="" />
       adesignjem@gmail.com |
-      <a href="https://www.instagram.com/adesignjem" target="_blank">
+      <a
+        href="https://www.instagram.com/adesignjem"
+        target="_blank"
+        title="link to instagram site"
+      >
         @adesignjem</a
       >
       | www.adesignjem.com
