--- a/projects.html
+++ b/projects.html
@@ -28,13 +28,13 @@
                 <img src="images/jemlogo.png" class="primarylogo" alt="" />
               </a>
             </li>
-            <li class="active">
+            <li>
               <a href="/"> Home</a>
             </li>
             <li>
               <a href="/about.html"> About</a>
             </li>
-            <li>
+            <li class="active">
               <a href="/projects.html"> Projects</a>
             </li>
             <li>
@@ -73,6 +73,7 @@
             <a
               href="https://bespoke-raindrop-998144.netlify.app/"
               target="_blank"
+              title="link to inspirational quote website"
             >
               <img
                 src="images/quote.png"
@@ -87,6 +88,7 @@
               <a
                 href="https://bespoke-raindrop-998144.netlify.app/"
                 target="_blank"
+                title="link to inspirational quote website"
                 >Inspirational Quote Generator</a
               >
             </h5>
@@ -98,7 +100,9 @@
             <a
               href="https://bespoke-raindrop-998144.netlify.app/"
               target="_blank"
+              title="link to inspirational quote website"
               >get your inspirational quote!</a
+            >
             >
             <br />
             <br />
@@ -116,6 +120,7 @@
             <a
               href="https://adorable-vacherin-85ae36.netlify.app/"
               target="_blank"
+              title="link to world clock app"
             >
               <img
                 src="images/time.png"
@@ -129,6 +134,7 @@
               <a
                 href="https://adorable-vacherin-85ae36.netlify.app/"
                 target="_blank"
+                title="link to world clock app"
                 >World Clock</a
               >
             </h5>
@@ -150,6 +156,7 @@
           <h4>JAVASCRIPT - CDN - MOMENT.JS</h4>
           <div class="col-sm-6 border text-left">
             <a href="https://jemweather.netlify.app/" target="_blank">
+              title="link to world weather app"
               <img
                 src="images/weather.png"
                 width="300px"
@@ -159,7 +166,10 @@
           <div class="col-sm-6 border text-left">
             <br />
             <h5>
-              <a href="https://jemweather.netlify.app/" target="_blank"
+              <a
+                href="https://jemweather.netlify.app/"
+                target="_blank"
+                title="link to world weather app"
                 >World Weather</a
               >
             </h5>
@@ -180,7 +190,11 @@
           <h3>Beccie Dunn Fitness</h3>
           <h4>FIGMA DESIGN</h4>
           <div class="col-sm-6 border text-left">
-            <a href="https://www.becciedunnfitness.com" target="_blank">
+            <a
+              href="https://www.becciedunnfitness.com"
+              target="_blank"
+              title="link to Beccie Dunn Fitness website"
+            >
               <img
                 src="images/beccie.png"
                 width="300px"
@@ -190,7 +204,10 @@
           <div class="col-sm-6 border text-left">
             <br />
             <h5>
-              <a href="https://www.becciedunnfitness.com" target="_blank"
+              <a
+                href="https://www.becciedunnfitness.com"
+                target="_blank"
+                title="link to Beccie Dunn Fitness website"
                 >Beccie Dunn Fitness</a
               >
             </h5>
@@ -213,7 +230,11 @@
           <h3>Bowen Head Toe Tail</h3>
           <h4>FIGMA DESIGN</h4>
           <div class="col-sm-6 border text-left">
-            <a href="https://www.bowenheadtoetail.com" target="_blank">
+            <a
+              href="https://www.bowenheadtoetail.com"
+              target="_blank"
+              title="link to Bowen Head Toe Tail website"
+            >
               <img
                 src="images/bowen.png"
                 width="300px"
@@ -223,7 +244,10 @@
           <div class="col-sm-6 border text-left">
             <br />
             <h5>
-              <a href="https://www.bowenheadtoetail.com" target="_blank"
+              <a
+                href="https://www.bowenheadtoetail.com"
+                target="_blank "
+                title="link to Bowen Head Toe Tail website"
                 >Bowen Head Toe Tail</a
               >
             </h5>
@@ -241,7 +265,11 @@
     <footer class="footer">
       <img src="images/jemlogo.png" width="60px" alt="" />
       adesignjem@gmail.com |
-      <a href="https://www.instagram.com/adesignjem" target="_blank">
+      <a
+        href="https://www.instagram.com/adesignjem"
+        target="_blank"
+        title="web design and developer instagram"
+      >
         @adesignjem</a
       >
       | www.adesignjem.com
