updated and to +

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
               title="link to nonchalant magazine website"
               >Nonchalant Magazine</a
             >
-            writers team, which involved researching and writing content, using
+            writers team, which involved researching + writing content, using
             Wordpress, including SEO + social media<br /><br />In 2022 I
             volunteered as a Website Designer for
             <a
