final SEO checks

--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="/styles.css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Check out the projects I have designed and built. Some projects I have purely just designed, as these were before I became a Web Developer. However, most are websites I have both designed and built using the skills I have learned through SheCodes."
+    />
     <title>Projects</title>
   </head>
   <body>
