--- a/about.html
+++ b/about.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="/styles.css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is the 'about me' page, which includes infomration around my background and experience."
+    />
     <title>About</title>
   </head>
   <body>
