--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="/styles.css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Get in touch with me, to find out more
+    about prices , timescales and how I can make your website come to life. I
+    look forward to hearing from you!>
     <title>Contact</title>
   </head>
   <body>
