included open sourced r link

--- a/about.html
+++ b/about.html
@@ -67,6 +67,10 @@
             developer course and have not looked back. <br /><br />
             I qualified as a Junior Web Developer in Spring 2025 + continue to
             build + develop my skills (literally).
+            <br /><br />
+            I designed and built this website myself, which is hosted on
+            <a href="https://www.netlify.com">Netlify</a> and is open sourced on
+            <a href="https://github.com/JemLBT/adesignjem">GitHub</a>
           </h4>
         </div>
       </div>
