--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,10 @@
     <link rel="stylesheet" href="/styles.css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Get in touch with me, to find out more
-    about prices , timescales and how I can make your website come to life. I
-    look forward to hearing from you!>
+    <meta
+      name="description"
+      content="get in touch via email or social media to find out how i can design and develop your dream website!"
+    />
     <title>Contact</title>
   </head>
   <body>
@@ -49,7 +50,7 @@
     </div>
     <div class="hero">
       <h1>CONTACT</h1>
-      <h2>contactcontactcontactcontact</h2>
+      <h2>contactcontactcontact</h2>
     </div>
     <br /><br />
     <div class="projects">
